// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__filename-and-__dirname.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname-2.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
",
}
`;

exports[`__filename-and-__dirname-2.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`importing-json.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "SyntaxError: expecting ';'
  at <rootDir>
  at importModul
  at runFileTarge
  at mai
  at sr
  at runModul
  at factor
  at <anonymous
  at <eval
  fileName: "<rootDir>/src/test_fixtures/scripts/some-json.json"
  lineNumber: 3
}
",
  "stdout": "",
}
`;

exports[`some-coffeescript.coffee 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "SyntaxError: expecting ';'
  at <rootDir>
  at importModul
  at runFileTarge
  at mai
  at sr
  at runModul
  at factor
  at <anonymous
  at <eval
  fileName: "<rootDir>/src/test_fixtures/scripts/some-coffeescript.coffee"
  lineNumber: 4
}
",
  "stdout": "",
}
`;

exports[`some-json.json 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "SyntaxError: expecting ';'
  at <rootDir>
  at importModul
  at runFileTarge
  at mai
  at sr
  at runModul
  at factor
  at <anonymous
  at <eval
  fileName: "<rootDir>/src/test_fixtures/scripts/some-json.json"
  lineNumber: 3
}
",
  "stdout": "",
}
`;

exports[`some-jsx.jsx 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "SyntaxError: unexpected token in expression: '<'
  at <rootDir>
  at importModul
  at runFileTarge
  at mai
  at sr
  at runModul
  at factor
  at <anonymous
  at <eval
  fileName: "<rootDir>/src/test_fixtures/scripts/some-jsx.jsx"
  lineNumber: 11
}
",
  "stdout": "",
}
`;

exports[`some-tsx.tsx 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "SyntaxError: unexpected token in expression: '<'
  at <rootDir>
  at importModul
  at runFileTarge
  at mai
  at sr
  at runModul
  at factor
  at <anonymous
  at <eval
  fileName: "<rootDir>/src/test_fixtures/scripts/some-tsx.tsx"
  lineNumber: 12
}
",
  "stdout": "",
}
`;

exports[`some-typescript.ts 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "SyntaxError: expecting ';'
  at <rootDir>
  at importModul
  at runFileTarge
  at mai
  at sr
  at runModul
  at factor
  at <anonymous
  at <eval
  fileName: "<rootDir>/src/test_fixtures/scripts/some-typescript.ts"
  lineNumber: 4
}
",
  "stdout": "",
}
`;
